# auto-minify-html

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
auto_minify_html/: __init__.py  core.py
tests/: test_auto_minify_html.py
